# aktsp2025

./: README.md  aktsp2025.opam  aktsp2025.opam.locked  dune-project  projects.md
.github/workflows/: ci.yml
src/abseval/: abseval.ml
src/constraint/abseval/: constraint_abseval.ml
src/constraint/grammar/: constraint_grammar.ml
src/crashcourse/: basics.ml  collections.ml  types.ml
src/domain/: intDomain.ml
src/eval/: concrete.ml
src/fixpoint/: fixpoint.ml
src/modelcheck/: checker.ml
src/modelcheck/program/: modelcheck_program.ml
src/regex/: brzozowski.ml  dune  re.ml  re_lexer.mll  re_parser.mly  regex.ml  simplify.ml
src/symbolic/: symbolic.ml
src/toylangs/: bool.ml  imp.ml  rnd.ml
src/wp/: wp.ml
test/constraint/grammar/: grammar_test.ml
test/domain/: intDomain_test.ml
test/eval/: concrete_test.ml
test/fixpoint/: nfa_eps_test.ml  transition_test.ml
test/regex/: brzozowski_test.ml  brzozowski_test.mli  dune  re_parser_test.ml  regex_test.ml  simplify_test.ml
